# strawberry_field_ws

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/ibvs/: hc  homography_control  vision_topics  visual_control
devel/lib/pkgconfig/: ibvs.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  visp_ros.pc
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: move  turtlebot3_drive
devel/lib/visp_ros/: test-vel  tutorial-franka-coppeliasim-ibvs-apriltag  tutorial-franka-coppeliasim-joint-impedance-control  tutorial-franka-coppeliasim-pbvs-apriltag  visp_ros_afma6_node  visp_ros_bebop2_visual_servo_node  visp_ros_biclops_node  visp_ros_blob_tracker_node  visp_ros_pbvs_blob_node  visp_ros_viper650_node  visp_ros_viper850_node
devel/share/ibvs/cmake/: ibvsConfig.cmake
devel/share/roseus/ros/visp_ros/: manifest.l
devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
devel/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
devel/share/visp_ros/cmake/: visp_ros-msg-paths.cmake  visp_rosConfig.cmake
src/ibvs/: CMakeLists.txt  package.xml
src/ibvs/scrips/: grafics.py  odom_saver_txt.py
src/ibvs/src/: homography_control.cpp  homography_vision.cpp  vision_utils.cpp  vision_utils.h
src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: Dropped Text.txt  turtlebot3_empty_world.launch  turtlebot3_fresa.launch  turtlebot3_stage_1.launch
src/turtlebot3_simulations/turtlebot3_gazebo/src/: move.cpp
(+43 files in other folders)
